assets/css/style.css
a {
  text-decoration: none;
}

h1 {
  font-family: Staatliches;
  font-size: 120px;
}

@media only screen and (max-width: 750px) {
  h1 {
    font-size: 75px
  }
}

@media only screen and (max-width: 450px) {
  h1 {
    font-size: 50px
  }
}

#category {
  font-family: Staatliches;
  font-weight: 500;
}

#title {
  letter-spacing: 0.4px;
  font-size: 22px;
  font-size: 1.375rem;
  line-height: 1.13636;
}

#banner {
  height: auto;
}

#editor {
  font-size: 16px;
  font-size: 1rem;
  line-height: 1.75;
}

.uk-container>:last-child {
 margin-bottom: 20;
}

.uk-navbar-container {
  margin-left: 25px;
  margin-right: 25px;
  background: #fff !important;
  font-family: Staatliches;
}

@media only screen and (max-width: 960px) {
  .uk-navbar-container {
    margin-left: 15px;
    margin-right: 15px
  }
}

@media only screen and (max-width: 640px) {
  .uk-navbar-container {
    margin-left: 0;
    margin-right: 0
  }
}

@media only screen and (max-width: 800px) {
  .two-col {
    display: none
  }
}

@media only screen and (min-width: 801px) {
  .one-col {
    display: none
  }
}

.min-height {
  min-height: 250px;
}

.make-narrow {
  max-width: 700px;
}

